# quicknxs

./: .gitmodules  .pre-commit-config.yaml  MANIFEST.in  README.md  environment.yml  pyproject.toml  setup.cfg
.github/: pull_request_template.md
.github/workflows/: actions.yml  package.yml  test.yml
build_tools/: travis_ci_build.sh
conda.recipe/: meta.yaml
docs/: conf.py  index.rst  release_notes.rst
docs/api/: modules.rst  quicknxs.config.rst  quicknxs.interfaces.data_handling.rst  quicknxs.interfaces.event_handlers.rst  quicknxs.interfaces.rst  quicknxs.rst  quicknxs.ui.rst  reflectivity_ui.config.rst  reflectivity_ui.interfaces.data_handling.rst  reflectivity_ui.interfaces.event_handlers.rst  reflectivity_ui.interfaces.rst  reflectivity_ui.rst  reflectivity_ui.ui.rst
docs/developer/: environment.rst  integration_test.rst  overview.rst  release.rst
docs/releasenotes/: index.rst
docs/user/: advanced_parameters.rst  dead_time_correction.rst  index.rst
quicknxs/interfaces/: data_manager.py  plotting.py  smooth_dialog.py
quicknxs/interfaces/data_handling/: instrument.py  off_specular.py
quicknxs/interfaces/event_handlers/: main_handler.py
quicknxs/ui/: deadtime_entry.py  deadtime_settings.py  mplwidget.py  ui_main_window.ui
reflectivity_ui/interfaces/: configuration.py  data_manager.py  main_window.py  plotting.py
reflectivity_ui/interfaces/data_handling/: data_set.py  instrument.py  quicknxs_io.py
reflectivity_ui/ui/: deadtime_entry.py  ui_main_window.ui
src/quicknxs/: gui.py
src/quicknxs/interfaces/: __init__.py  (+7 more)
test/: README.md  conftest.py
test/comparison/: Offspec_comparison.ipynb  general_comparison.ipynb  gisans_comparison.ipynb  plot_utils.py
test/notebooks/: datasets.py  event_reduction.py  events_based_reduction.ipynb  plot_utils.py
test/ui/: test_deadtime_entry.py  test_deadtime_settings.py  test_dialog_box.py  test_losing_direct_beam.py  test_main_window.py  test_missing_cross_section.py  test_mplwidget.py  test_reflectivity_extraction_global.py  test_status_bar.py  ui_utilities.py
(+40 files in other folders)
