[project]
name = "quicknxs"
description = "Magnetic Reflectivity Reduction"
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = ["mantid>=6.10", "matplotlib", "qtpy"]
license = { text = "Apache-2.0" }
keywords = ["neutrons", "quicknxs", "magnetic reflectivity"]
readme = "README.md"

[project.urls]
homepage = "https://github.com/neutrons/quicknxs"
repository = "https://github.com/neutrons/quicknxs"
issues = "https://github.com/neutrons/quicknxs/issues"

[build-system]
requires = ["setuptools >= 47", "wheel", "toml", "versioningit"]
build-backend = "setuptools.build_meta"

[tool.versioningit.vcs]
method = "git"
default-tag = "4.0.0"

[tool.versioningit.next-version]
method = "minor"

[tool.versioningit.format]
distance = "{next_version}.dev{distance}"
dirty = "{version}+d{build_date:%Y%m%d}"
distance-dirty = "{next_version}.dev{distance}+d{build_date:%Y%m%d%H%M}"

[tool.versioningit.write]
file = "src/quicknxs/_version.py"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*", "scripts*", "docs*", "notebooks"]

[tool.setuptools.package-data]
"*" = ["*.yml", "*.yaml", "*.ini", "*.gx", "*.json", "*.ui"]

[project.gui-scripts]
quicknxs-gui = "quicknxs.gui:main"

[tool.pytest.ini_options]
pythonpath = [".", "src", "scripts"]
testpaths = ["test/"]
python_files = ["test*.py"]
norecursedirs = [".git", "tmp*", "_tmp*", "__pycache__", "*dataset*", "*data_set*"]
markers = ["datarepo: mark a test as using reflection_ui-data repository"]
qt_log_format = "{rec.when} {rec.type_name}: {rec.message}"

[tool.ruff]
line-length = 120
select = ["A", "ARG", "ASYNC", "BLE", "C90", "E", "F", "I", "N", "UP032", "W"]
ignore = ["A001", "ARG001", "ARG002", "BLE001", "C901", "E402", "E501", "E712", "E721", "E722", "E741", "F811", "F821", "F841", "N802", "N803", "N806", "N815", "N816", "N999", "W293"]
exclude = ["notebooks/*", "icons/*", "test/notebooks/*"]

[tool.coverage.run]
source = "src/quicknxs"
omit = "test/*"
